src/objects/CM_Provider_Identification__c.object
<CustomObject>
    <description>Provider Identification Object contains the Issued Identification types and numbers of the provider like License,NPI, Medicare etc</description>
    <fields>
        <fullName>CM_Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Issu_Ident_Nmbr__c</fullName>
        <externalId>true</externalId>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_PI_Board_Code__c</fullName>
        <label>Board Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_PI_Current_Status__c</fullName>
        <description>Current Status</description>
        <inlineHelpText>Current Status</inlineHelpText>
        <label>Current Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_PI_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_PI_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_PI_License_Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_PI_NPI_Type_CD__c</fullName>
        <description>NPI Type Code</description>
        <inlineHelpText>NPI Type Code</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_PI_Prov__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Identification</relationshipLabel>
        <relationshipName>Provider_Identification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_PI_State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_PI_Valid__c</fullName>
        <label>Valid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Prvdr_Iden_Typ_Cd__c</fullName>
        <label>Identification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NPI</fullName>
                </value>
                <value>
                    <fullName>Govt. ID</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Provider Identification</label>
    <nameField>
        <displayFormat>PI-{0}</displayFormat>
        <label>Provider Identification Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Identification</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>